--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://projeto-final.cxzj4fkwd61l.us-east-1.rds.amazonaws.com:3306/projeto_final
+spring.datasource.url=jdbc:mysql://projeto-final.cimjhxl52seb.us-east-2.rds.amazonaws.com:3306/projeto_final
 spring.datasource.username=admin
 spring.datasource.password=Luisrobbo22
 spring.jpa.show-sql=true
